refactor: Add Predictive Proxy Expiration and Phase 0/1 Code Cleanup
- Added timestamp tracking to PodState and ProxyBackendHandler to predict tenant lease expiration
- Upgraded ProxyFrontendHandler 3-step hierarchy to safely route 35s expired Developer loads to enterprise idle pods
- Deleted legacy TaskManager.java dead code
- Replaced sidhirange with shruzard prefixes